[ADD] Unit tests cases for UserService